--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,5 +28,8 @@
     <color name="light2">#D6D8DB</color>
 
     <color name="purple1">#515BDE</color>
+    <color name="green1">#4D666A</color>
+    <color name="green2">#324755</color>
+    <color name="green3">#87BCBF</color>
 
 </resources>
