UPDATES: - Added multiple images for the home screen. - Added new RV for the home screen.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,8 @@
         app:headerLayout="@layout/nav_header"
         app:itemBackground="@color/green3"
         app:itemIconTint="@color/white"
+        app:itemTextAppearance="@style/NavigationDrawerStyle"
         app:itemTextColor="@color/white"
         app:menu="@menu/menu_first_screen" />
+
 </androidx.drawerlayout.widget.DrawerLayout>
