UPDATES: - Implemented the home screen and description screen.

--- a/app/src/main/res/layout/rv_home_feature.xml
+++ b/app/src/main/res/layout/rv_home_feature.xml
@@ -63,7 +63,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/rift_soft_regular"
-                android:textColor="@color/grey"
+                android:textColor="@color/grey1"
                 android:textSize="10sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
