--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -35,6 +35,7 @@
     <color name="green4">#334856</color>
     <color name="green5">#7EAEB1</color>
     <color name="green6">#4D989D</color>
+    <color name="green7">#5C888A</color>
 
     <color name="grey1">#7D8184</color>
     <color name="grey2">#404040</color>
