--- a/app/src/main/res/layout/fragment_helplines.xml
+++ b/app/src/main/res/layout/fragment_helplines.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.onboard.AboutUsFragment">
+    tools:context=".ui.helplines.HelplinesFragment">
 
     <include
         android:id="@+id/include"
@@ -18,7 +18,6 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@color/colorPrimary"
         android:fillViewport="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/include">
@@ -28,18 +27,28 @@
             android:layout_height="wrap_content"
             tools:context=".ui.onboard.AboutUsFragment">
 
-            <TextView
-                android:id="@+id/textView2"
+            <View
+                android:id="@+id/view4"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:background="@color/light1"
-                android:fontFamily="@font/europa_bold"
-                android:gravity="center"
-                android:text="@string/about_us"
-                android:textColor="@color/black"
-                android:textSize="25sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableEnd="@drawable/ic_phone"
+                android:drawablePadding="8dp"
+                android:fontFamily="@font/europa_bold"
+                android:text="@string/helplines"
+                android:textColor="@color/black"
+                android:textSize="25sp"
+                app:layout_constraintBottom_toBottomOf="@+id/view4"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -48,28 +57,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
-                android:src="@drawable/img_intro"
-                app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btProceed"
-                android:layout_width="match_parent"
-                android:layout_height="62dp"
-                android:layout_marginStart="22dp"
-                android:layout_marginTop="58dp"
-                android:layout_marginEnd="22dp"
-                android:layout_marginBottom="58dp"
-                android:fontFamily="@font/poppins_bold"
-                android:text="@string/proceed"
-                android:textColor="@color/white"
-                android:textSize="18sp"
-                app:backgroundTint="@color/purple1"
-                app:cornerRadius="16dp"
+                android:src="@drawable/img_helplines"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ivMain"
-                app:layout_constraintVertical_bias="1.0" />
+                app:layout_constraintTop_toBottomOf="@+id/view4" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
