--- a/app/src/main/res/layout/fragment_references.xml
+++ b/app/src/main/res/layout/fragment_references.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.onboard.AboutUsFragment">
+    android:background="@color/green7"
+    tools:context=".ui.partners.PartnersFragment">
 
     <include
-        android:id="@+id/include"
+        android:id="@+id/include2"
         layout="@layout/include_toolbar"
         android:layout_width="match_parent"
         android:layout_height="68dp"
@@ -18,58 +19,40 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@color/colorPrimary"
         android:fillViewport="true"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include">
+        app:layout_constraintTop_toBottomOf="@+id/include2">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:context=".ui.onboard.AboutUsFragment">
+            android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/textView4"
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
+                android:layout_height="72dp"
                 android:background="@color/light1"
                 android:fontFamily="@font/europa_bold"
                 android:gravity="center"
-                android:text="@string/about_us"
+                android:text="@string/references"
                 android:textColor="@color/black"
                 android:textSize="25sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
-                android:id="@+id/ivMain"
+                android:id="@+id/imageView2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:src="@drawable/img_intro"
-                app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btProceed"
-                android:layout_width="match_parent"
-                android:layout_height="62dp"
-                android:layout_marginStart="22dp"
-                android:layout_marginTop="58dp"
-                android:layout_marginEnd="22dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="38dp"
+                android:layout_marginEnd="16dp"
                 android:layout_marginBottom="58dp"
-                android:fontFamily="@font/poppins_bold"
-                android:text="@string/proceed"
-                android:textColor="@color/white"
-                android:textSize="18sp"
-                app:backgroundTint="@color/purple1"
-                app:cornerRadius="16dp"
+                android:adjustViewBounds="true"
+                android:src="@drawable/img_references"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/ivMain"
-                app:layout_constraintVertical_bias="1.0" />
+                app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
