--- a/app/src/main/res/layout/fragment_terms_and_condition.xml
+++ b/app/src/main/res/layout/fragment_terms_and_condition.xml
@@ -26,7 +26,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:context=".ui.onboard.OnboardFragment">
+            tools:context=".ui.onboard.AboutUsFragment">
 
             <TextView
                 android:id="@+id/textView2"
