UPDATES: - Completed the timer screen UI. - New library for the progress bar and blur UI.

--- a/app/src/main/res/layout/fragment_activity_description.xml
+++ b/app/src/main/res/layout/fragment_activity_description.xml
@@ -113,7 +113,7 @@
             android:layout_height="wrap_content">
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/materialButton"
+                android:id="@+id/btStart"
                 android:layout_width="178dp"
                 android:layout_height="58dp"
                 android:layout_marginTop="32dp"
@@ -150,7 +150,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/view3"
-                app:layout_constraintTop_toBottomOf="@+id/materialButton"
+                app:layout_constraintTop_toBottomOf="@+id/btStart"
                 app:layout_constraintVertical_bias="0.0" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
