--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -36,9 +36,11 @@
     <color name="green5">#7EAEB1</color>
     <color name="green6">#4D989D</color>
     <color name="green7">#5C888A</color>
+    <color name="green8">#5B7E80</color>
 
     <color name="grey1">#7D8184</color>
     <color name="grey2">#404040</color>
+    <color name="grey3">#8296B1</color>
 
     <color name="brown1">#464040</color>
 
