--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,6 +29,16 @@
         <item name="backgroundTint">@color/transparent</item>
     </style>
 
+    <style name="Button.OutlinedButton.IconOnly.NonTransparent" parent="Widget.MaterialComponents.Button">
+        <item name="iconPadding">0dp</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:paddingLeft">12dp</item>
+        <item name="android:paddingRight">12dp</item>
+        <item name="android:minWidth">48dp</item>
+        <item name="android:minHeight">48dp</item>
+    </style>
+
     <style name="NavigationDrawerStyle">
         <item name="android:textSize">22sp</item>
         <item name="android:fontFamily">@font/proxima_nova_regular</item>
