UPDATES: - Completed the progress tracker screen. - New table for the progress tracker. - New icons and images.

--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -100,4 +100,9 @@
             app:popUpTo="@id/discoverFragment"
             app:popUpToInclusive="true" />
     </fragment>
+    <fragment
+        android:id="@+id/monthViewFragment"
+        android:name="com.arkapp.rootedminds.ui.monthView.MonthViewFragment"
+        android:label="fragment_month_view"
+        tools:layout="@layout/fragment_month_view" />
 </navigation>
