--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -38,6 +38,7 @@
     <color name="green7">#5C888A</color>
     <color name="green8">#5B7E80</color>
     <color name="green9">#7BA9AC</color>
+    <color name="green10">#9AD6D9</color>
 
     <color name="grey1">#7D8184</color>
     <color name="grey2">#404040</color>
@@ -49,5 +50,6 @@
     <color name="brown1">#464040</color>
 
     <color name="orange">#D97D54</color>
+    <color name="grey6">#BEBCC9</color>
 
 </resources>
